--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "mongoose": "^6.3.0",
     "next": "12.1.0",
     "react": "17.0.2",
