--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@paypal/react-paypal-js": "^7.8.1",
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
+    "cookie": "^0.5.0",
     "mongoose": "^6.3.0",
     "next": "12.1.0",
     "react": "17.0.2",
